# eli5-app

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
api/: README.md  index.py
app/: page.tsx
frontend/app/: layout.tsx  page.tsx
notebooks/: eli5_playground.ipynb
